# ChangeLog for x11-misc/swarp
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Nov 2009; Justin Lecher (jlec) <jlec@j-schmitz.net> swarp-0.1.ebuild,
  swarp-9999.ebuild:
  HOMEPAGE fixed

  04 Dec 2007; Jakub Moc <jakub@gentoo.org> swarp-0.1.ebuild,
  swarp-9999.ebuild:
  Add ~amd64 keyword

  10 Dec 2006; Jakub Moc <jakub@gentoo.org> swarp-9999.ebuild:
  Fix nonsensical KEYWORDS

  13 Oct 2006; Cedric Krier <ced@ced.homedns.org> +swarp-0.1.ebuild,
  swarp-9999.ebuild:
  Version bump

  12 Oct 2006; Cedric Krier <ced@ced.homedns.org> +swarp-9999.ebuild,
  +metadata.xml:
  New Ebuild for bug 151067
